--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa21ca682d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efdc2a0f110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa21c775810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa21c775a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efdc275b850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efdc275ba50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa21cd14250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa21cd14450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efdc2cfb250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efdc2cfb450&gt;]</pre>
 </div>
 
 </div>
