--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbd020b29d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe137917e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd01dc19d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbd01dc1bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1376039d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe137603bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd023603d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbd023605d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe137ba9310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe137ba9510&gt;]</pre>
 </div>
 
 </div>
