--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faf94f94f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73a024b150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faf94ca2890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faf94ca2a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73a021ca10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73a021cc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faf952422d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faf952424d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73a07be310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73a07be510&gt;]</pre>
 </div>
 
 </div>
