--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7577f8810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcc9a2b1850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc757b12a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc757b12c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc99fa38d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcc99fa3ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7580b8490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc7580b8690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc9a5432d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcc9a5434d0&gt;]</pre>
 </div>
 
 </div>
