--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f18dd487290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f65ea4cf510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f18dd15d7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f18dd15d9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f65ea4a68d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f65ea4a6ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f18dd7371d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f18dd7373d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f65eaa46250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f65eaa46450&gt;]</pre>
 </div>
 
 </div>
