--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3b72365a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7fa9738dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b72057a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3b72057c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fa9d24a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7fa9d24c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b725f8510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3b725f8710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7faa2c9410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7faa2c9610&gt;]</pre>
 </div>
 
 </div>
