--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee44bb76d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca51e6be10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee4487d7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee44872b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca51bc1890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca51bc1a90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee44e9d650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee44e4a650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca521652d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca521654d0&gt;]</pre>
 </div>
 
 </div>
