--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22a2baf3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f4783fd50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22a28bd8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22a28bdad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f47529b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f47529d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22a2e5d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22a2e5d590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f47acb490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f47acb690&gt;]</pre>
 </div>
 
 </div>
