--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f56a16596d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa96a7b0a90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f56a1362bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f56a1362dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa96a778b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa96a778d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f56a1909610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f56a1909810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa96ad324d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa96ad326d0&gt;]</pre>
 </div>
 
 </div>
