--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa96a7b0a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7eff8dd41890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa96a778b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa96a778d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7eff8da22890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7eff8da22a90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa96ad324d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa96ad326d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7eff8dfe7510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7eff8dfc33d0&gt;]</pre>
 </div>
 
 </div>
