--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa79128aa50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc23248ccd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa790f79a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa790f79c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc232172a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc232172c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa79151c410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa79151c610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc232718350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc232718550&gt;]</pre>
 </div>
 
 </div>
