--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e4a1f5750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73d75f0b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e4a1c3d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e4a1c3f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73d7605910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73d7605b10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e4a76b6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e4a76b8d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73d7be0310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73d7be0510&gt;]</pre>
 </div>
 
 </div>
