--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73d75f0b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0fda5e3390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f73d7605910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f73d7605b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fda8c2610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0fda8c2810&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f73d7be0310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f73d7be0510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fdae64050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0fdae64250&gt;]</pre>
 </div>
 
 </div>
