--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0fda5e3390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4642c10dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fda8c2610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0fda8c2810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4642915b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4642915d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fdae64050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0fdae64250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4642ebc510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4642ebc710&gt;]</pre>
 </div>
 
 </div>
