--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc574ee6290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a25679110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc574eb4b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc574eb4d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a2536ff90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a2536ac50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc57545d510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc57545d710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a25928a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a259446d0&gt;]</pre>
 </div>
 
 </div>
