--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0cb549f4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa609bdccd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cb5433a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0cb5433c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6098c99d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa6098c9b50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cb5a0d410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0cb5a0d610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa609e67390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa609e67510&gt;]</pre>
 </div>
 
 </div>
