--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f43ff3e7f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff687c5f690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f43ff0a1210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f43ff385910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff687932990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff687932b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f43ff9aa310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f43ff961390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff687f0c350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff687f0c550&gt;]</pre>
 </div>
 
 </div>
