--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff687c5f690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d4e115190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff687932990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff687932b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d4de1cad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d4de1ccd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff687f0c350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff687f0c550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d4e3c2450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d4e3c2650&gt;]</pre>
 </div>
 
 </div>
