--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa452cb5450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb9cd94650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4529baad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4529bacd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb9ca85b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb9ca85d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa452f60490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa452f60690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb9d043590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb9d043790&gt;]</pre>
 </div>
 
 </div>
